force-app/main/default/objects/ssot__AssessmentEnvelopeItem__dlm/fields/ssot__AssessmentEnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentEnvelopeId__c</fullName>
    <label>Assessment Envelope</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentEnvelopeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>