force-app/main/default/objects/ssot__AssessmentEnvelopeItem__dlm/fields/ssot__EnvelopeItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnvelopeItemStatus__c</fullName>
    <label>Envelope Item Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnvelopeItemStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>