force-app/main/default/objects/ssot__AssessmentEnvelopeItem__dlm/fields/ssot__rel_1720291286034_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291286034_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentEnvelopeItem_AssessmentId__rel</label>
    <referenceTo>ssot__Assessment__dlm</referenceTo>
    <relationshipLabel>AssessmentEnvelopeItem_AssessmentId__rel</relationshipLabel>
    <relationshipName>rel_1720291286034_end</relationshipName>
    <type>Lookup</type>
</CustomField>